--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-slate
 title: Revisiting the Bad Smell and Refactoring Relationship: A Systematic Literature Review
+description: Engenharia de Software Experimental (ESELAW) - 2020
