--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: Revisiting the Bad Smell and Refactoring Relationship: A Systematic Literature Review
+title: Revisiting the Bad Smell and Refactoring Relationship - A Systematic Literature Review
 description: Engenharia de Software Experimental (ESELAW) - 2020
 theme: jekyll-theme-slate
