--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Revisiting the Bad Smell and Refactoring Relationship - A Systematic Literature Review
 description: Experimental Software Engineering Track (ESELAW) - 2020
-theme: jekyll-theme-slate
+theme: jekyll-theme-leap-day
