--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,3 @@
-title: Revisiting the Bad Smell and Refactoring Relationship
-&nbsp;
-A Systematic Literature Review
-
+title: Revisiting the Bad Smell and Refactoring Relationship <br/> A Systematic Literature Review
 description: Experimental Software Engineering Track (ESELAW) - 2020
 theme: jekyll-theme-leap-day
