--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Revisiting the Bad Smell and Refactoring Relationship <br/> A Systematic Literature Review
 description: Experimental Software Engineering Track (ESELAW) - 2020
 theme: jekyll-theme-leap-day
-is_project_page: false
+github:
+  is_project_page: false
